--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -139,7 +139,7 @@ font-1 = "Iosevka Nerd Font:style=Regular:size=22;5"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher left1 bspwm left2
+modules-left = bsp-layout left1 bspwm left2
 modules-center = mpd
 modules-right = right7 cpu right6 memory right5 pulseaudio right4 battery right3 network right2 date right1 sysmenu
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
