--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -84,6 +84,18 @@ click-right = /usr/local/bin/def-dmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/bsp-layout]
+type = custom/text
+
+content = "缾"
+content-background = ${color.shade1}
+content-foreground = ${color.foreground}
+content-padding = 1
+
+click-left = bsp-layout cycle --layouts tiled,monocle,grid,tall,wide 
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/sysmenu]
 type = custom/text
 content = "襤 "
